# mri-code

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  constitution.md  install.sh  installer.toml  package.json  pyproject.toml  uninstall.sh  update.sh
.agents/skills/: brainstorm-facilitation  brainstorming  meta-prompt  mri-adversarial-review  mri-brainstorm  mri-debug  mri-design  mri-devplan  mri-document-project  mri-domain-research  mri-elicit  mri-finish  mri-forge  mri-implement  mri-market-research  mri-meta-prompt  mri-review  mri-scaffold-python  mri-tdd  mri-technical-research  mri-verify  mri-worktrees  scaffold-python
.claude/: settings.json
.claude/commands/: brainstorm.md  debug.md  finish.md  implement.md  meta-prompt.md  mri-adversarial-review.md  mri-brainstorm.md  mri-debug.md  mri-design.md  mri-devplan.md  mri-document-project.md  mri-domain-research.md  mri-elicit.md  mri-finish.md  mri-forge.md  mri-implement.md  mri-market-research.md  mri-meta-prompt.md  mri-resume.md  mri-review.md  mri-scaffold-python.md  mri-technical-research.md  plan.md  review.md  scaffold.md
.claude/hooks/: lint-test.sh  welcome.sh
.mri-installer-kit/: cli.py  engine.py
.toolbox/dev/: BUILD_PLAN.md  DECISIONS.md  MERGE_DESIGN.md  PROJECT_STATE.md  WORKFLOW.md
.toolbox/scripts/: install.sh  setup.sh
.toolbox/templates/python-uv/: pyproject.toml
dev/: BUILD_PLAN.md  DECISIONS.md  MERGE_DESIGN.md  PROJECT_STATE.md  WORKFLOW.md
docs/: DECISIONS.md  PROJECT_STATE.md  SEARCH_RESULTS.md  WORKFLOW.md  architecture.md  development.md  installation.md  skills.md
docs/diagrams/: pipeline.d2  render.sh  skills-map.d2
mri_code_installer/: __init__.py  main.py  spec.py
payload/: AGENTS.md  CLAUDE.md  constitution.md  models.md  settings.json
payload/commands/: mri-adversarial-review.md  mri-brainstorm.md  mri-debug.md  mri-design.md  mri-devplan.md  mri-document-project.md  mri-domain-research.md  mri-elicit.md  mri-finish.md  mri-forge.md  mri-implement.md  mri-market-research.md  mri-meta-prompt.md  mri-resume.md  mri-review.md  mri-scaffold-python.md  mri-technical-research.md
payload/hooks/: format.sh  lint-test.sh  welcome.sh
payload/stacks/: python-uv.md  react.md  symfony-hexagonal-apiplatform.md  symfony-hexagonal.md  symfony.md
payload/templates/python-uv/: .env.example  README.md  pyproject.toml
payload/templates/python-uv/src/__PACKAGE_NAME__/: __init__.py
payload/templates/python-uv/tests/: test_smoke.py
scripts/: setup.sh
skills/: meta-prompt  scaffold-python
templates/python-uv/: .env.example  README.md  pyproject.toml
tests/: test_installer.py
(+166 files in other folders)
