[project]
name = "__PROJECT_NAME__"
version = "0.1.0"
description = "__PROJECT_DESCRIPTION__"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/__PACKAGE_NAME__"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# Do not lint the vendored toolchain (templates, etc.): otherwise `ruff check .`
# from the root would pick up .py files under .mri_devtools/.
extend-exclude = [".mri_devtools"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "--cov=__PACKAGE_NAME__ --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
